# limcalc

./: .gitignore  CHALLENGES.md  CHANGELOG.md  LICENSE  README.md  cabal.project  limcalc.bib  limcalc.cabal  limcalc_paper_final.aux  limcalc_paper_final.out  limcalc_paper_final.tex
.github/workflows/: build-and-publish.yml
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.10.3/: package.cache
python/: README.md  pyproject.toml
python/limcalc/: __init__.py  client.py  codegen.py  grammar.lark  parser.py
python/tests/: test_client.py  test_codegen.py  test_parser.py
src/LimCalc/: AlgNum.hs  BivPoly.hs  Calculus.hs  DiffField.hs  Expand.hs  Expr.hs  Integrate.hs  Limit.hs  MultivariateLimit.hs  Poly.hs  Pretty.hs  Puiseux.hs  QPoly.hs  RationalFunction.hs  Risch.hs  Simplify.hs  SymExpand.hs  SymPuiseux.hs  Types.hs
src/LimCalc/Algebra/: AlgNum.hs  BivPoly.hs  Poly.hs  QPoly.hs  RationalFunction.hs
src/LimCalc/Core/: Expr.hs  ExprJSON.hs  Simplify.hs  Types.hs
src/LimCalc/Differentiation/: Calculus.hs  DiffField.hs  Limit.hs  MultivariateLimit.hs
src/LimCalc/Integration/: Risch.hs
src/LimCalc/Integration/Risch/: Exponential.hs  Primitive.hs
src/LimCalc/Risch/: Exponential.hs  Primitive.hs
src/LimCalc/Series/: Expand.hs  Puiseux.hs  SymExpand.hs  SymPuiseux.hs
test/: Main.hs
