[project]
name = "limcalc"
version = "0.1.0"
description = "Limit-based symbolic calculus engine with NumPy/Numba code generation"
authors = [{name = "Jason Parker", email = "jparker588@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
numba = ["numba>=0.57"]
dev = [
    "pytest>=7.0",
    "numpy>=1.24",
    "scipy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["limcalc"]

[tool.pytest.ini_options]
testpaths = ["tests"]